@@ -1,6 +1,10 @@
 2007-05-30 Hal Rosenstock <halr@voltaire.com>
 
 	* scripts/ibcheckerrs.in, scripts/ibcheckport.in,
+	  scripts/ibcheckportstate.in, scripts/ibcheckportwidth.in,
+	  scripts/ibdatacounts.in: Add lid and port into verbose output
+
+	* scripts/ibcheckerrs.in, scripts/ibcheckport.in,
 	  scripts/ibdatacounts.in: Changed portnum to port in output
 
 	* Makefile.am, configure.in: Added ibdatacounts
